--- a/program/usemarcon.vcproj
+++ b/program/usemarcon.vcproj
@@ -20,7 +20,9 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="2"
+				GlobalOptimizations="TRUE"
 				InlineFunctionExpansion="1"
+				FavorSizeOrSpeed="2"
 				AdditionalIncludeDirectories="..\library"
 				PreprocessorDefinitions="WIN32;NDEBUG;_CONSOLE;BATCHRUN;HAVE_STDLIB_H;HAVE_FCNTL_H;HAVE_IO_H;HAVE_STRING_H"
 				StringPooling="TRUE"
