--- a/Makefile.in
+++ b/Makefile.in
@@ -102,7 +102,7 @@ RECURSIVE_TARGETS = info-recursive dvi-recursive install-info-recursive \
 	uninstall-info-recursive all-recursive install-data-recursive \
 	install-exec-recursive installdirs-recursive install-recursive \
 	uninstall-recursive check-recursive installcheck-recursive
-DIST_COMMON = Makefile.am Makefile.in TODO aclocal.m4 config.guess \
+DIST_COMMON = Makefile.am Makefile.in aclocal.m4 config.guess \
 	config.sub configure configure.ac depcomp install-sh ltmain.sh \
 	missing mkinstalldirs usemarcon-config.in
 DIST_SUBDIRS = $(SUBDIRS)
