--- a/pcre/pcre.vcproj
+++ b/pcre/pcre.vcproj
@@ -1,22 +1,45 @@
 <?xml version="1.0" encoding="Windows-1252"?>
 <VisualStudioProject
 	ProjectType="Visual C++"
-	Version="7.10"
+	Version="8,00"
 	Name="pcre"
 	ProjectGUID="{2360C85A-52B0-4DEA-8F22-69F0CD0EB102}"
-	RootNamespace="pcre">
+	RootNamespace="pcre"
+	>
 	<Platforms>
 		<Platform
-			Name="Win32"/>
+			Name="Win32"
+		/>
 	</Platforms>
+	<ToolFiles>
+	</ToolFiles>
 	<Configurations>
 		<Configuration
 			Name="Debug|Win32"
 			OutputDirectory=".\Debug"
 			IntermediateDirectory=".\Debug"
 			ConfigurationType="4"
+			InheritedPropertySheets="$(VCInstallDir)VCProjectDefaults\UpgradeFromVC71.vsprops"
 			UseOfMFC="0"
-			ATLMinimizesCRunTimeLibraryUsage="FALSE">
+			ATLMinimizesCRunTimeLibraryUsage="false"
+			>
+			<Tool
+				Name="VCPreBuildEventTool"
+				Description="Copying default headers"
+				CommandLine="copy $(InputDir)config.h.win32 $(InputDir)config.h&#x0D;&#x0A;copy $(InputDir)pcre.h.win32 $(InputDir)pcre.h&#x0D;&#x0A;copy $(InputDir)pcre_stringpiece.h.win32 $(InputDir)pcre_stringpiece.h&#x0D;&#x0A;"
+			/>
+			<Tool
+				Name="VCCustomBuildTool"
+			/>
+			<Tool
+				Name="VCXMLDataGeneratorTool"
+			/>
+			<Tool
+				Name="VCWebServiceProxyGeneratorTool"
+			/>
+			<Tool
+				Name="VCMIDLTool"
+			/>
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
@@ -24,104 +47,124 @@
 				PreprocessorDefinitions="WIN32;_DEBUG;_WINDOWS;HAVE_STDLIB_H;HAVE_FCNTL_H;HAVE_IO_H;HAVE_STRING_H;HAVE_CONFIG_H"
 				BasicRuntimeChecks="3"
 				RuntimeLibrary="1"
-				BufferSecurityCheck="TRUE"
-				UsePrecompiledHeader="2"
+				BufferSecurityCheck="true"
+				UsePrecompiledHeader="0"
 				PrecompiledHeaderFile=".\Debug/pcre.pch"
 				AssemblerListingLocation=".\Debug/"
 				ObjectFile=".\Debug/"
 				ProgramDataBaseFileName=".\Debug/"
 				BrowseInformation="1"
 				WarningLevel="3"
-				WarnAsError="TRUE"
-				SuppressStartupBanner="TRUE"
-				DebugInformationFormat="4"/>
+				WarnAsError="true"
+				SuppressStartupBanner="true"
+				DebugInformationFormat="4"
+			/>
 			<Tool
-				Name="VCCustomBuildTool"/>
+				Name="VCManagedResourceCompilerTool"
+			/>
+			<Tool
+				Name="VCResourceCompilerTool"
+				Culture="1035"
+			/>
+			<Tool
+				Name="VCPreLinkEventTool"
+			/>
 			<Tool
 				Name="VCLibrarianTool"
 				OutputFile=".\Debug\pcre.lib"
-				SuppressStartupBanner="TRUE"/>
+				SuppressStartupBanner="true"
+			/>
 			<Tool
-				Name="VCMIDLTool"/>
+				Name="VCALinkTool"
+			/>
 			<Tool
-				Name="VCPostBuildEventTool"/>
+				Name="VCXDCMakeTool"
+			/>
 			<Tool
-				Name="VCPreBuildEventTool"
-				Description="Copying default headers"
-				CommandLine="copy $(InputDir)config.h.win32 $(InputDir)config.h
-copy $(InputDir)pcre.h.win32 $(InputDir)pcre.h
-copy $(InputDir)pcre_stringpiece.h.win32 $(InputDir)pcre_stringpiece.h
-"/>
+				Name="VCBscMakeTool"
+			/>
 			<Tool
-				Name="VCPreLinkEventTool"/>
+				Name="VCFxCopTool"
+			/>
 			<Tool
-				Name="VCResourceCompilerTool"
-				Culture="1035"/>
-			<Tool
-				Name="VCWebServiceProxyGeneratorTool"/>
-			<Tool
-				Name="VCXMLDataGeneratorTool"/>
-			<Tool
-				Name="VCManagedWrapperGeneratorTool"/>
-			<Tool
-				Name="VCAuxiliaryManagedWrapperGeneratorTool"/>
+				Name="VCPostBuildEventTool"
+			/>
 		</Configuration>
 		<Configuration
 			Name="Release|Win32"
 			OutputDirectory=".\Release"
 			IntermediateDirectory=".\Release"
 			ConfigurationType="4"
+			InheritedPropertySheets="$(VCInstallDir)VCProjectDefaults\UpgradeFromVC71.vsprops"
 			UseOfMFC="0"
-			ATLMinimizesCRunTimeLibraryUsage="FALSE">
+			ATLMinimizesCRunTimeLibraryUsage="false"
+			>
+			<Tool
+				Name="VCPreBuildEventTool"
+				Description="Copying default headers"
+				CommandLine="copy $(InputDir)config.h.win32 $(InputDir)config.h&#x0D;&#x0A;copy $(InputDir)pcre.h.win32 $(InputDir)pcre.h&#x0D;&#x0A;copy $(InputDir)pcre_stringpiece.h.win32 $(InputDir)pcre_stringpiece.h&#x0D;&#x0A;"
+			/>
+			<Tool
+				Name="VCCustomBuildTool"
+			/>
+			<Tool
+				Name="VCXMLDataGeneratorTool"
+			/>
+			<Tool
+				Name="VCWebServiceProxyGeneratorTool"
+			/>
+			<Tool
+				Name="VCMIDLTool"
+			/>
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="1"
-				GlobalOptimizations="TRUE"
 				InlineFunctionExpansion="1"
 				FavorSizeOrSpeed="2"
 				AdditionalIncludeDirectories="."
 				PreprocessorDefinitions="WIN32;NDEBUG;_WINDOWS;HAVE_STDLIB_H;HAVE_FCNTL_H;HAVE_IO_H;HAVE_STRING_H;HAVE_CONFIG_H"
-				StringPooling="TRUE"
+				StringPooling="true"
 				RuntimeLibrary="0"
-				EnableFunctionLevelLinking="TRUE"
-				UsePrecompiledHeader="2"
+				EnableFunctionLevelLinking="true"
+				UsePrecompiledHeader="0"
 				PrecompiledHeaderFile=".\Release/pcre.pch"
 				AssemblerListingLocation=".\Release/"
 				ObjectFile=".\Release/"
 				ProgramDataBaseFileName=".\Release/"
 				WarningLevel="3"
-				WarnAsError="TRUE"
-				SuppressStartupBanner="TRUE"/>
+				WarnAsError="true"
+				SuppressStartupBanner="true"
+			/>
 			<Tool
-				Name="VCCustomBuildTool"/>
+				Name="VCManagedResourceCompilerTool"
+			/>
+			<Tool
+				Name="VCResourceCompilerTool"
+				Culture="1035"
+			/>
+			<Tool
+				Name="VCPreLinkEventTool"
+			/>
 			<Tool
 				Name="VCLibrarianTool"
 				OutputFile=".\Release\pcre.lib"
-				SuppressStartupBanner="TRUE"/>
+				SuppressStartupBanner="true"
+			/>
 			<Tool
-				Name="VCMIDLTool"/>
+				Name="VCALinkTool"
+			/>
 			<Tool
-				Name="VCPostBuildEventTool"/>
+				Name="VCXDCMakeTool"
+			/>
 			<Tool
-				Name="VCPreBuildEventTool"
-				Description="Copying default headers"
-				CommandLine="copy $(InputDir)config.h.win32 $(InputDir)config.h
-copy $(InputDir)pcre.h.win32 $(InputDir)pcre.h
-copy $(InputDir)pcre_stringpiece.h.win32 $(InputDir)pcre_stringpiece.h
-"/>
+				Name="VCBscMakeTool"
+			/>
 			<Tool
-				Name="VCPreLinkEventTool"/>
+				Name="VCFxCopTool"
+			/>
 			<Tool
-				Name="VCResourceCompilerTool"
-				Culture="1035"/>
-			<Tool
-				Name="VCWebServiceProxyGeneratorTool"/>
-			<Tool
-				Name="VCXMLDataGeneratorTool"/>
-			<Tool
-				Name="VCManagedWrapperGeneratorTool"/>
-			<Tool
-				Name="VCAuxiliaryManagedWrapperGeneratorTool"/>
+				Name="VCPostBuildEventTool"
+			/>
 		</Configuration>
 	</Configurations>
 	<References>
@@ -129,85 +172,110 @@ copy $(InputDir)pcre_stringpiece.h.win32 $(InputDir)pcre_stringpiece.h
 	<Files>
 		<Filter
 			Name="Source Files"
-			Filter="">
+			>
 			<File
-				RelativePath=".\pcre_chartables.c">
+				RelativePath=".\pcre_chartables.c"
+				>
 			</File>
 			<File
-				RelativePath=".\pcre_compile.c">
+				RelativePath=".\pcre_compile.c"
+				>
 			</File>
 			<File
-				RelativePath=".\pcre_config.c">
+				RelativePath=".\pcre_config.c"
+				>
 			</File>
 			<File
-				RelativePath=".\pcre_dfa_exec.c">
+				RelativePath=".\pcre_dfa_exec.c"
+				>
 			</File>
 			<File
-				RelativePath=".\pcre_exec.c">
+				RelativePath=".\pcre_exec.c"
+				>
 			</File>
 			<File
-				RelativePath=".\pcre_fullinfo.c">
+				RelativePath=".\pcre_fullinfo.c"
+				>
 			</File>
 			<File
-				RelativePath=".\pcre_get.c">
+				RelativePath=".\pcre_get.c"
+				>
 			</File>
 			<File
-				RelativePath=".\pcre_globals.c">
+				RelativePath=".\pcre_globals.c"
+				>
 			</File>
 			<File
-				RelativePath=".\pcre_info.c">
+				RelativePath=".\pcre_info.c"
+				>
 			</File>
 			<File
-				RelativePath=".\pcre_maketables.c">
+				RelativePath=".\pcre_maketables.c"
+				>
 			</File>
 			<File
-				RelativePath=".\pcre_newline.c">
+				RelativePath=".\pcre_newline.c"
+				>
 			</File>
 			<File
-				RelativePath=".\pcre_ord2utf8.c">
+				RelativePath=".\pcre_ord2utf8.c"
+				>
 			</File>
 			<File
-				RelativePath=".\pcre_refcount.c">
+				RelativePath=".\pcre_refcount.c"
+				>
 			</File>
 			<File
-				RelativePath=".\pcre_study.c">
+				RelativePath=".\pcre_study.c"
+				>
 			</File>
 			<File
-				RelativePath=".\pcre_tables.c">
+				RelativePath=".\pcre_tables.c"
+				>
 			</File>
 			<File
-				RelativePath=".\pcre_try_flipped.c">
+				RelativePath=".\pcre_try_flipped.c"
+				>
 			</File>
 			<File
-				RelativePath=".\pcre_ucp_searchfuncs.c">
+				RelativePath=".\pcre_ucp_searchfuncs.c"
+				>
 			</File>
 			<File
-				RelativePath=".\pcre_valid_utf8.c">
+				RelativePath=".\pcre_valid_utf8.c"
+				>
 			</File>
 			<File
-				RelativePath=".\pcre_version.c">
+				RelativePath=".\pcre_version.c"
+				>
 			</File>
 			<File
-				RelativePath=".\pcre_xclass.c">
+				RelativePath=".\pcre_xclass.c"
+				>
 			</File>
 		</Filter>
 		<Filter
 			Name="Header Files"
-			Filter="">
+			>
 			<File
-				RelativePath="config.h.win32">
+				RelativePath="config.h.win32"
+				>
 			</File>
 			<File
-				RelativePath=".\pcre.h.win32">
+				RelativePath=".\pcre.h.win32"
+				>
 			</File>
 			<File
-				RelativePath=".\pcre_stringpiece.h.win32">
+				RelativePath=".\pcre_stringpiece.h.win32"
+				>
 			</File>
 			<File
-				RelativePath=".\pcrecpp.h">
+				RelativePath=".\pcrecpp.h"
+				>
 			</File>
 			<File
-				RelativePath=".\pcrecpparg.h.win32">
+				RelativePath=".\pcrecpparg.h.win32"
+				>
 			</File>
 		</Filter>
 	</Files>
