--- a/program/Makefile.am
+++ b/program/Makefile.am
@@ -3,4 +3,4 @@ usemarcon_SOURCES = usemarcon.cpp
 
 AM_CPPFLAGS = -I$(top_srcdir)/library
 
-LDADD = ../library/libusemarcon.la ../pcre/libpcrecpp.la
+LDADD = ../library/libusemarcon.la ../pcre/libpcre.la
