--- a/program/usemarcon.vcproj
+++ b/program/usemarcon.vcproj
@@ -4,6 +4,7 @@
 	Version="8,00"
 	Name="usemarcon"
 	ProjectGUID="{1EA20291-ACE8-43FC-8700-8F4289E60641}"
+	RootNamespace="usemarcon"
 	>
 	<Platforms>
 		<Platform
@@ -57,6 +58,7 @@
 				ProgramDataBaseFileName=".\Release/"
 				WarningLevel="3"
 				SuppressStartupBanner="true"
+				Detect64BitPortabilityProblems="false"
 				CompileAs="0"
 			/>
 			<Tool
