Fixed condition handling in rulefile.cpp once more. Fixed pcre.vcproj and build instructions.

--- a/pcre/pcre.vcproj
+++ b/pcre/pcre.vcproj
@@ -239,6 +239,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\pcre_ucd.c"
+				>
+			</File>
+			<File
 				RelativePath=".\pcre_ucp_searchfuncs.c"
 				>
 			</File>
