Changes to make USEMARCON compile in Mac OS X.

--- a/configure.ac
+++ b/configure.ac
@@ -1,5 +1,6 @@
 AC_INIT(program/usemarcon.cpp)
 AM_INIT_AUTOMAKE(usemarcon_cpp,3.18)
+AC_CONFIG_MACRO_DIR([m4])
 
 AC_PROG_CC
 AC_PROG_CXX
@@ -11,6 +12,8 @@ AM_SANITY_CHECK
 AC_LANG_CPLUSPLUS
 
 AC_CHECK_HEADERS(fcntl.h)
+AC_CHECK_HEADERS(malloc.h)
+AC_CHECK_HEADERS(cstdlib)
 AC_STDC_HEADERS
 
 AC_SUBST(USEMARCON_CONF_CFLAGS)
