--- a/.drone.yml
+++ b/.drone.yml
@@ -14,9 +14,9 @@ steps:
       from_secret: docker_password
   when:
     branch: [master, test]
-    event: [push, tag]    
-trigger:
-  event: [push, tag]
+    #event: [push, tag]    
+#trigger:
+#  event: [push, tag]
 ---
 kind: pipeline
 name: debian
@@ -37,6 +37,6 @@ steps:
       from_secret: docker_password
   when:
     branch: [master, test]
-    event: [push, tag]    
-trigger:
-  event: [push, tag]
+    #event: [push, tag]    
+#trigger:
+#  event: [push, tag]
